Use the ShouldDrawIncognitoIcon() oracle in GetNewerMaterialUiButtonPath().

Bug: 865898
Change-Id: I4c25a2900927b979f697f426eb92da2d68ecff7b
Reviewed-on: https://chromium-review.googlesource.com/1145722
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577007}
Former-commit-id: 7c7beac8599e334ad1ad0413fefadf7a292e65e9